--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <a href="#introduccion">Introducción</a>
         <a href="#contenido">Contenido</a>
         <a href="#actividades">Actividades</a>
-        <a href="#fuentes">Fuentes</a>
+        <a href="#fuentes">Bibliografía</a>
     </nav>
 
     <!-- -------------------- ESTILOS RESTO DE LA PÁGINA -------------------- -->
@@ -1575,5 +1575,6 @@
 </body>
 
 </html>
+
 
 
