--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         <a href="#home" class="activo">Home</a>
         <a href="#introduccion">Introducción</a>
         <a href="#contenido">Contenido</a>
-        <a href="#actividades">Actividades</a>
+        <a href="#actividades">Cuestionario</a>
         <a href="#fuentes">Bibliografía</a>
     </nav>
 
@@ -1575,6 +1575,7 @@
 </body>
 
 </html>
+
 
 
 
