--- a/index.html
+++ b/index.html
@@ -981,90 +981,120 @@
             aproximadamente \(5.32 \text{ mm}\).</p>
 
         <!-- MÉTODOS DE FABRICACIÓN -->
-        <h2 style="font-size: 22px; margin-top: 35px;">Métodos de fabricación más utilizados</h2>
+<h2 style="font-size: 22px; margin-top: 35px;">Métodos de fabricación más utilizados</h2>
 
-        <p>
-            La fabricación de engranes requiere procesos que permitan generar perfiles precisos y relaciones de
-            transmisión exactas. Los métodos utilizados dependen del tipo de engrane, la precisión requerida, el volumen
-            de producción y la disponibilidad de maquinaria. En engranes cónicos y helicoidales se emplean principalmente
-            procesos de fresado por forma, procesos generadores especializados y rectificado, especialmente cuando se
-            requieren tolerancias estrechas.
-        </p>
+<p>
+    La fabricación de engranes requiere procesos que permitan generar perfiles precisos y relaciones de
+    transmisión exactas. Los métodos utilizados dependen del tipo de engrane, la precisión requerida, el volumen
+    de producción y la disponibilidad de maquinaria. En engranes cónicos y helicoidales se emplean principalmente
+    procesos de fresado por forma, procesos generadores especializados y rectificado, especialmente cuando se
+    requieren tolerancias estrechas.
+</p>
 
-        <!-- TÍTULO CON VENTANA FLOTANTE AL PASAR EL MOUSE -->
-        <h3 style="margin-top:20px;">
-            <span class="texto-tooltip-wrapper">
-                1. Fresado con cabezal divisor
-                <span class="texto-tooltip-box">
-                    El cabezal divisor es un accesorio de fresadora que permite rotar y posicionar con precisión una
-                    pieza para realizar cortes a ángulos exactos o divisiones iguales.
-                </span>
-            </span>
-        </h3>
+<!-- 1. FRESADO CON CABEZAL DIVISOR -->
+<h3 style="margin-top:20px;">
+    <span class="texto-tooltip-wrapper">
+        1. Fresado con cabezal divisor
+        <span class="texto-tooltip-box">
+            El cabezal divisor es un accesorio de fresadora que permite rotar y posicionar con precisión una
+            pieza para realizar cortes a ángulos exactos o divisiones iguales.
+        </span>
+    </span>
+</h3>
 
-        <p>
-            En este método, el perfil del diente se obtiene mediante una herramienta cuya geometría corresponde al
-            perfil transversal del diente. Cada diente se corta de manera individual utilizando un cabezal divisor para
-            posicionar la pieza de acuerdo con el número de dientes requerido.
-        </p>
+<p>
+    En este método, el perfil del diente se obtiene mediante una herramienta cuya geometría corresponde al
+    perfil transversal del diente. Cada diente se corta de manera individual utilizando un cabezal divisor para
+    posicionar la pieza de acuerdo con el número de dientes requerido.
+</p>
 
-        <p><strong>Características técnicas:</strong></p>
-        <ul style="font-size:15px;">
-            <li>El espaciado se controla mediante división mecánica (relación 40:1 u otras).</li>
-            <li>Se necesita seleccionar una herramienta con el perfil correspondiente al módulo.</li>
-            <li>Adecuado para producción baja o fabricación por pieza.</li>
-        </ul>
-        <p><strong>Aplicaciones:</strong> engranes cónicos rectos, prototipos, reparaciones y piezas individuales.</p>
+<p><strong>Características técnicas:</strong></p>
+<ul style="font-size:15px;">
+    <li>El espaciado se controla mediante división mecánica (relación 40:1 u otras).</li>
+    <li>Se necesita seleccionar una herramienta con el perfil correspondiente al módulo.</li>
+    <li>Adecuado para producción baja o fabricación por pieza.</li>
+</ul>
+<p><strong>Aplicaciones:</strong> engranes cónicos rectos, prototipos, reparaciones y piezas individuales.</p>
 
-        <h3 style="margin-top:25px;">2. Maquinado generador para engranes cónicos</h3>
 
-        <p>
-            Los engranes cónicos espirales e hipoides se fabrican mediante maquinaria especializada que coordina la
-            rotación de la herramienta y la pieza para generar el perfil de manera cinemática.
-        </p>
+<!-- 2. MAQUINADO GENERADOR PARA ENGRANES CÓNICOS -->
+<h3 style="margin-top:25px;">
+    <span class="texto-tooltip-wrapper">
+        2. Maquinado generador para engranes cónicos
+        <span class="texto-tooltip-box">
+            Proceso de fabricación donde el perfil del diente se obtiene mediante generación cinemática en una 
+            máquina especializada, coordinando la rotación de la herramienta y la pieza. Este método se usa para 
+            engranes cónicos espirales e hipoides, permitiendo precisión superior respecto al fresado por forma.
+        </span>
+    </span>
+</h3>
 
-        <p><strong>Características técnicas:</strong></p>
-        <ul style="font-size:15px;">
-            <li>El perfil se obtiene mediante generación, no por forma directa.</li>
-            <li>El ángulo de espiral, profundidad del diente y relación de transmisión se controlan mediante el ajuste
-                del cabezal.</li>
-            <li>Requiere máquinas específicas para engranes cónicos espirales o hipoides.</li>
-        </ul>
-        <p><strong>Aplicaciones:</strong> engranes para diferenciales automotrices y transmisiones angulares con
-            requisitos específicos de geometría.</p>
+<p>
+    Los engranes cónicos espirales e hipoides se fabrican mediante maquinaria especializada que coordina la
+    rotación de la herramienta y la pieza para generar el perfil de manera cinemática.
+</p>
 
-        <h3 style="margin-top:25px;">3. Fresado helicoidal sincronizado</h3>
+<p><strong>Características técnicas:</strong></p>
+<ul style="font-size:15px;">
+    <li>El perfil se obtiene mediante generación, no por forma directa.</li>
+    <li>El ángulo de espiral, profundidad del diente y relación de transmisión se controlan mediante el ajuste del cabezal.</li>
+    <li>Requiere máquinas específicas para engranes cónicos espirales o hipoides.</li>
+</ul>
+<p><strong>Aplicaciones:</strong> engranes para diferenciales automotrices y transmisiones angulares con requisitos específicos de geometría.</p>
 
-        <p>
-            En este proceso, el diente helicoidal se genera sincronizando la rotación del husillo con el avance
-            longitudinal mediante un tren de engranes. La herramienta utilizada es una herramienta de forma, pero la
-            inclinación de la hélice se obtiene mediante la sincronización mecánica.
-        </p>
 
-        <p><strong>Características técnicas:</strong></p>
-        <ul style="font-size:15px;">
-            <li>El ángulo de hélice depende del ajuste del tren de engranes.</li>
-            <li>No requiere maquinaria generadora especializada.</li>
-            <li>Adecuado para producción baja o talleres de maquinado general.</li>
-        </ul>
-        <p><strong>Aplicaciones:</strong> engranes helicoidales de baja producción, prototipos y fabricación bajo
-            pedido.</p>
+<!-- 3. FRESADO HELICOIDAL SINCRONIZADO -->
+<h3 style="margin-top:25px;">
+    <span class="texto-tooltip-wrapper">
+        3. Fresado helicoidal sincronizado
+        <span class="texto-tooltip-box">
+            Método de maquinado donde la rotación del husillo se sincroniza con el avance longitudinal mediante 
+            un tren de engranes. La herramienta es de forma, pero la hélice se obtiene por la sincronización mecánica, 
+            permitiendo generar dientes helicoidales sin maquinaria generadora compleja.
+        </span>
+    </span>
+</h3>
 
-        <h3 style="margin-top:25px;">4. Rectificado de engranes</h3>
+<p>
+    En este proceso, el diente helicoidal se genera sincronizando la rotación del husillo con el avance
+    longitudinal mediante un tren de engranes. La herramienta utilizada es una herramienta de forma, pero la
+    inclinación de la hélice se obtiene mediante la sincronización mecánica.
+</p>
 
-        <p>
-            El rectificado se utiliza para engranes que requieren tolerancias estrechas o control de desviaciones de
-            perfil. Se emplean muelas abrasivas con la geometría adecuada al tipo de engrane.
-        </p>
+<p><strong>Características técnicas:</strong></p>
+<ul style="font-size:15px;">
+    <li>El ángulo de hélice depende del ajuste del tren de engranes.</li>
+    <li>No requiere maquinaria generadora especializada.</li>
+    <li>Adecuado para producción baja o talleres de maquinado general.</li>
+</ul>
+<p><strong>Aplicaciones:</strong> engranes helicoidales de baja producción, prototipos y fabricación bajo pedido.</p>
 
-        <p><strong>Características técnicas:</strong></p>
-        <ul style="font-size:15px;">
-            <li>Corrige errores residuales del proceso de corte.</li>
-            <li>Permite alcanzar grados de precisión según normas AGMA o ISO.</li>
-            <li>Controla problemas como error de paso, error de perfil y error de línea de acción.</li>
-        </ul>
-        <p><strong>Aplicaciones:</strong> engranes de transmisiones industriales, cajas automotrices y maquinaria de
-            alta precisión.</p>
+
+<!-- 4. RECTIFICADO DE ENGRANES -->
+<h3 style="margin-top:25px;">
+    <span class="texto-tooltip-wrapper">
+        4. Rectificado de engranes
+        <span class="texto-tooltip-box">
+            Proceso de acabado de alta precisión que utiliza muelas abrasivas especializadas para corregir errores 
+            de paso, perfil y línea de acción después del corte. Se emplea cuando se requieren tolerancias estrechas 
+            y engranes de alto desempeño conforme a normas AGMA o ISO.
+        </span>
+    </span>
+</h3>
+
+<p>
+    El rectificado se utiliza para engranes que requieren tolerancias estrechas o control de desviaciones de
+    perfil. Se emplean muelas abrasivas con la geometría adecuada al tipo de engrane.
+</p>
+
+<p><strong>Características técnicas:</strong></p>
+<ul style="font-size:15px;">
+    <li>Corrige errores residuales del proceso de corte.</li>
+    <li>Permite alcanzar grados de precisión según normas AGMA o ISO.</li>
+    <li>Controla problemas como error de paso, error de perfil y error de línea de acción.</li>
+</ul>
+<p><strong>Aplicaciones:</strong> engranes de transmisiones industriales, cajas automotrices y maquinaria de
+    alta precisión.</p>
 
         <!-- PROBLEMAS COMUNES Y SOLUCIONES -->
         <h2 style="font-size: 22px; margin-top: 35px;">Problemas comunes y soluciones</h2>
@@ -1596,6 +1626,7 @@
 </body>
 
 </html>
+
 
 
 
