--- a/index.html
+++ b/index.html
@@ -1075,7 +1075,7 @@
     <span class="texto-tooltip-wrapper">
         4. Rectificado de engranes
         <span class="texto-tooltip-box">
-            Proceso de acabado de alta precisión que utiliza muelas abrasivas especializadas para corregir errores 
+            Proceso de acabado de alta precisión que utiliza discos abrasivos especializadas para corregir errores 
             de paso, perfil y línea de acción después del corte. Se emplea cuando se requieren tolerancias estrechas 
             y engranes de alto desempeño conforme a normas AGMA o ISO.
         </span>
@@ -1084,7 +1084,7 @@
 
 <p>
     El rectificado se utiliza para engranes que requieren tolerancias estrechas o control de desviaciones de
-    perfil. Se emplean muelas abrasivas con la geometría adecuada al tipo de engrane.
+    perfil. Se emplean discos abrasivos con la geometría adecuada al tipo de engrane.
 </p>
 
 <p><strong>Características técnicas:</strong></p>
@@ -1626,6 +1626,7 @@
 </body>
 
 </html>
+
 
 
 
