--- a/index.html
+++ b/index.html
@@ -1476,27 +1476,30 @@
         <h2 style="color: var(--rojo-linea);">Bibliografía</h2>
 
         <ul style="font-size:15px; line-height:1.7;">
-            <li>
-                Budynas, R. G., &amp; Nisbett, J. K. (2015).
-                <em>Diseño en ingeniería mecánica de Shigley</em> (10.ª ed.). McGraw-Hill.
-            </li>
-            <li>
-                Callister, W. D., &amp; Rethwisch, D. G. (2014).
-                <em>Ciencia e ingeniería de materiales</em> (9.ª ed.). John Wiley &amp; Sons.
-            </li>
-            <li>
-                DeGarmo, E. P., Black, J. T., &amp; Kohser, R. A. (2012).
-                <em>Materiales y procesos de manufactura</em> (11.ª ed.). Pearson Educación.
-            </li>
-            <li>
-                Groover, M. P. (2010).
-                <em>Fundamentals of modern manufacturing: Materials, processes, and systems</em> (4th ed.).
-                John Wiley &amp; Sons.
-            </li>
-            <li>
-                Norton, R. L. (2013).
-                <em>Diseño de máquinas</em> (4.ª ed.). McGraw-Hill.
-            </li>
+       <li>
+        Budynas, R. G., &amp; Nisbett, J. K. (2015).
+        <em>Diseño en ingeniería mecánica de Shigley</em> (10.ª ed.). McGraw-Hill.
+    </li>
+    <li>
+        Callister, W. D., &amp; Rethwisch, D. G. (2014).
+        <em>Materials science and engineering: An introduction</em> (9th ed.). John Wiley &amp; Sons.
+    </li>
+    <li>
+        DeGarmo, E. P., Black, J. T., &amp; Kohser, R. A. (2012).
+        <em>Materials and processes in manufacturing</em> (11th ed.). Pearson Educación.
+    </li>
+    <li>
+        Groover, M. P. (2010).
+        <em>Fundamentals of modern manufacturing: Materials, processes, and systems</em> (4th ed.). John Wiley &amp; Sons.
+    </li>
+    <li>
+        Norton, R. L. (2013).
+        <em>Diseño de máquinas</em> (4.ª ed.). McGraw-Hill.
+    </li>
+    <li>
+        OpenAI. (2025).
+        <em>ChatGPT (versión GPT-5.1) [Modelo de lenguaje de IA]</em>. https://chat.openai.com/
+    </li>
         </ul>
     </section>
 
@@ -1626,6 +1629,7 @@
 </body>
 
 </html>
+
 
 
 
