--- a/index.html
+++ b/index.html
@@ -685,8 +685,7 @@
             <span class="ref-tooltip ref-right">
                 Ver fuente
                 <span class="ref-tooltip-box">
-                    Descripción general de aplicaciones de engranajes basada en DeGarmo, E. P., Black, J. T. y
-                    Kohser, R. A. (2012) y Groover, M. P. (2010).
+                    DeGarmo, E. P., Black, J. T. y Kohser, R. A. (2012) y Groover, M. P. (2010).
                 </span>
             </span>
         </p>
@@ -700,8 +699,7 @@
             <span class="ref-tooltip ref-right">
                 Ver fuente
                 <span class="ref-tooltip-box">
-                    Criterios de diseño y funcionamiento tomados de Budynas, R. G. y Nisbett, J. K. (2015) y
-                    Norton, R. L. (2013).
+                    Budynas, R. G. y Nisbett, J. K. (2015) y Norton, R. L. (2013).
                 </span>
             </span>
         </p>
@@ -788,8 +786,7 @@
             <span class="ref-tooltip ref-right">
                 Ver fuente
                 <span class="ref-tooltip-box">
-                    Información de aplicaciones y manufactura basada en DeGarmo, E. P., Black, J. T. y
-                    Kohser, R. A. (2012) y Groover, M. P. (2010).
+                    DeGarmo, E. P., Black, J. T. y Kohser, R. A. (2012) y Groover, M. P. (2010).
                 </span>
             </span>
         </p>
@@ -850,8 +847,7 @@
             <span class="ref-tooltip ref-right">
                 Ver fuente
                 <span class="ref-tooltip-box">
-                    Descripción general de engranes cónicos tomada de Budynas, R. G. y Nisbett, J. K. (2015) y
-                    Norton, R. L. (2013).
+                    Budynas, R. G. y Nisbett, J. K. (2015) y Norton, R. L. (2013).
                 </span>
             </span>
         </p>
@@ -883,7 +879,7 @@
             <span class="ref-tooltip ref-right">
                 Ver fuente
                 <span class="ref-tooltip-box">
-                    Conceptos de geometría de engranes cónicos adaptados de Budynas, R. G. y Nisbett, J. K. (2015).
+                   Budynas, R. G. y Nisbett, J. K. (2015).
                 </span>
             </span>
         </p>
@@ -960,8 +956,7 @@
             <span class="ref-tooltip ref-right">
                 Ver fuente
                 <span class="ref-tooltip-box">
-                    Descripción del comportamiento de engranes helicoidales tomada de Norton, R. L. (2013) y
-                    Groover, M. P. (2010).
+                   Norton, R. L. (2013) y Groover, M. P. (2010).
                 </span>
             </span>
         </p>
@@ -1019,8 +1014,7 @@
             <span class="ref-tooltip ref-right">
                 Ver fuente
                 <span class="ref-tooltip-box">
-                    Definiciones de paso circular y helicoidal sintetizadas de Norton, R. L. (2013) y
-                    Callister, W. D. &amp; Rethwisch, D. G. (2014).
+                    Norton, R. L. (2013) y Callister, W. D. &amp; Rethwisch, D. G. (2014).
                 </span>
             </span>
         </p>
@@ -1093,8 +1087,7 @@
             <span class="ref-tooltip ref-right">
                 Ver fuente
                 <span class="ref-tooltip-box">
-                    Clasificación general de procesos de fabricación adaptada de DeGarmo, E. P., Black, J. T. y
-                    Kohser, R. A. (2012) y Groover, M. P. (2010).
+                DeGarmo, E. P., Black, J. T. y Kohser, R. A. (2012) y Groover, M. P. (2010).
                 </span>
             </span>
         </p>
@@ -1215,8 +1208,7 @@
             <span class="ref-tooltip ref-right">
                 Ver fuente
                 <span class="ref-tooltip-box">
-                    Clasificación de fallas y recomendaciones de ajuste basada en Norton, R. L. (2013),
-                    Budynas, R. G. y Nisbett, J. K. (2015) y Groover, M. P. (2010).
+                     Norton, R. L. (2013), Budynas, R. G. y Nisbett, J. K. (2015) y Groover, M. P. (2010).
                 </span>
             </span>
         </p>
@@ -1744,3 +1736,4 @@
 </body>
 
 </html>
+
